fix incorrect IDs in aria-labelledby

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <fieldset>
                 <legend>Which is your favorite animal:</legend>
-                <select id="dropdown" name="fav-animal" class="dropdown" aria-labelledby="select box">
+                <select id="dropdown" name="fav-animal" class="dropdown" aria-labelledby="dropdown">
                     <option disabled value>Select an option</option>
                     <option value="aligator">Aligator</option>
                     <option value="boa">Boa</option>
@@ -80,7 +80,7 @@
 
             <fieldset>
                 <legend>Any comments or questions?</legend>
-                <textarea name="comments" id="comments" aria-labelledby="textarea" rows="5"></textarea>
+                <textarea name="comments" id="comments" aria-labelledby="comments" rows="5"></textarea>
             </fieldset>
             <button id="submit" type="submit">Submit!</button>
         </form>
